--- a/.github/workflows/sync-sigma-rules.yml
+++ b/.github/workflows/sync-sigma-rules.yml
@@ -2,8 +2,8 @@ name: Sync Sigma Rules
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Daily
-  workflow_dispatch:
+    - cron: '0 0 * * *'  # Every day at midnight UTC
+  workflow_dispatch:      # Manual trigger
 
 jobs:
   sync-sigma-rules:
@@ -14,17 +14,15 @@ jobs:
       uses: actions/checkout@v4
       with:
         persist-credentials: true
-        fetch-depth: 0  # Required for pushing
+        fetch-depth: 0  # Needed for push
 
-    - name: Clone Sigma upstream repo
-      run: |
-        git clone --depth 1 https://github.com/SigmaHQ/sigma.git sigma-upstream
+    - name: Clone Sigma repo
+      run: git clone --depth 1 https://github.com/SigmaHQ/sigma.git sigma-upstream
 
-    - name: Prepare folders
-      run: |
-        mkdir -p rules/linux rules/windows rules/network
+    - name: Create folders if missing
+      run: mkdir -p rules/linux rules/windows rules/network
 
-    - name: Copy Sigma rules
+    - name: Copy updated rules
       run: |
         cp -ruv sigma-upstream/rules/linux/* rules/linux/ || true
         cp -ruv sigma-upstream/rules/windows/* rules/windows/ || true
@@ -32,10 +30,10 @@ jobs:
 
     - name: Configure Git
       run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Commit and push if there are changes
+    - name: Commit & Push if changes
       run: |
         git add rules/
         if git diff --cached --quiet; then
